center align profile name & fix margins on alt closet page

--- a/src/index.css
+++ b/src/index.css
@@ -65,6 +65,7 @@ h2.capitalize {
   font-weight: 700;
   font-size: 44px;
   margin-top: 8px;
+  text-align: center;
 }
 
 /* button css */
